# tcp_fullduplex_chatserver

./: Cargo.toml  LICENSE  README.md  client.py  server.toml
src/: config.rs  define.rs  main.rs  server.rs  structs.rs
src/server/: parser.rs  server_impl.rs
src/server/parser/: connection_list.rs  global.rs  whisper.rs
