[package]
name = "tcp_fullduplex_chatserver"
version = "0.1.0"
authors = ["segfo <k.segfo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.106"
serde = "1.0.106"
toml = "0.5"
regex = "1"